Fix the NC25+ style navigation pane highlights on NC28
The highlight of the active view was not visible on NC28.

Also, we now highlight also the hovered menu item with a background color like
the native apps of Nextcloud do in the recent versions.

TODO: The rounded background highlight is now visible also on the old NC
versions which use square layout everywhere. This doesn't look very nice.

--- a/css/music-navigation.css
+++ b/css/music-navigation.css
@@ -24,6 +24,19 @@
 	overflow-y: auto;
 }
 
+#app-navigation > ul > li {
+	border-radius: var(--border-radius-pill);
+}
+
+#app-navigation > ul > li:hover,
+#app-navigation > ul > li:focus {
+	background-color: var(--color-background-hover);
+}
+
+#app-navigation > ul > li.active {
+	background-color: var(--color-primary-element-light);
+}
+
 #app-navigation .app-navigation-separator {
 	border-bottom: 1px solid;
 	border-color: var(--color-main-text, #222);
